--- a/templates/appointment/_form.html.twig
+++ b/templates/appointment/_form.html.twig
@@ -11,6 +11,15 @@
 		</div>
 		<div class="row justify-content-center">
 
+			<div class="form-group col-md-6 ">
+				{{ form_row(form.date) }}
+			</div>
+
+            <div class="form-group col-md-6 ">
+				{{ form_row(form.hour, {'attr': {'class': 'form-select'}}) }}
+			</div>
+
+
             <div class="form-group col-md-6 ">
 				{{ form_row(form.patientStatus, {'attr': {'class': 'form-select'}}) }}
 			</div>
@@ -28,8 +37,9 @@
 				{{ form_row(form.doctor) }}
 			</div>
 
-			<div class="form-group col-md-6 ">
-				{{ form_row(form.hour, {'attr': {'class': 'form-select'}}) }}
+
+            <div class="form-group col-md-6 ">
+				{{ form_row(form.Consultation) }}
 			</div>
             
 			<br>
