--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -90,7 +90,7 @@
 						<i class="fal fa-times"></i>
 					</button>
 					<div class="mobile-logo">
-						<a href="home-medical-clinic.html"><img src="{{ asset('assets/img/logo.svg')}}" alt="Mediax"></a>
+						<a href="{{ path('app_homePage') }}"><img src="{{ asset('assets/img/logo.svg')}}" alt="Mediax"></a>
 					</div>
 					<div class="th-mobile-menu">
 						<ul>
@@ -108,6 +108,9 @@
 										<a href="#">Réservations</a>
 
 									</li>
+									<li>
+										<a href="{{ path('app_diagnosis') }}">Chat Bot</a>
+									</li>
 								{% elseif app.user.secretary %}
 									<li>
 										<a href="#">Doctors</a>
@@ -118,7 +121,7 @@
 														<a href="#">Cabinet</a>
 														<ul class="sub-menu">
 															<li>
-																<a href="#">les rendez-vous</a>
+																<a href="{{ path('app_appointment_index') }}">les rendez-vous</a>
 															</li>
 															<li>
 																<a href="#">liste des patients</a>
@@ -185,7 +188,7 @@
 								<div class="col-auto">
 									<div class="header-logo">
 										<div class="logo-bg" data-bg-src="assets/img/bg/logo_bg_1.png"></div>
-										<a href="#"><img src="{{asset('assets/img/logo.svg')}}" alt="Mediax"></a>
+										<a href="{{path('app_homePage')}}"><img src="{{asset('assets/img/logo.svg')}}" alt="Mediax"></a>
 									</div>
 								</div>
 								<div class="col-auto d-none d-lg-inline-block">
@@ -205,6 +208,9 @@
 														<a href="{{ path('app_appointment_index')}}">Réservations</a>
 
 													</li>
+													<li>
+														<a href="{{ path('app_diagnosis') }}">Chat Bot</a>
+													</li>
 												{% elseif app.user.secretary %}
 													<li>
 														<a href="#">Doctors</a>
@@ -215,10 +221,10 @@
 														<a href="#">Cabinet</a>
 														<ul class="sub-menu">
 															<li>
-																<a href="#">les rendez-vous</a>
+																<a href="{{ path('app_appointment_index') }}">les rendez-vous</a>
 															</li>
 															<li>
-																<a href="#">liste des patients</a>
+																<a href="{{ path('app_patient_index') }}">liste des patients</a>
 															</li>
 																														<li>
 																<a href="#">liste des secrétaires</a>
@@ -283,7 +289,7 @@
 						<i class="fal fa-times"></i>
 					</button>
 					<div class="mobile-logo">
-						<a href="home-medical-clinic.html"><img src="assets/img/logo.svg" alt="Mediax"></a>
+						<a href="{{path('app_homePage')}}"><img src="assets/img/logo.svg" alt="Mediax"></a>
 					</div>
 					<div class="th-mobile-menu">
 						<ul>
@@ -294,7 +300,7 @@
 							<li>
 								<a href="{{ path('app_about') }}">About Us</a>
 							</li>
-							<li class="menu-item-has-children">
+							{# <li class="menu-item-has-children">
 								<a href="#">Service</a>
 								<ul class="sub-menu">
 									<li>
@@ -304,7 +310,7 @@
 										<a href="#">Service Details</a>
 									</li>
 								</ul>
-							</li>
+							</li> #}
 
 							<li>
 								<a href="{{ path('app_blog_index')}}">Blog</a>
@@ -331,7 +337,7 @@
 								<div class="col-auto">
 									<div class="header-logo">
 										<div class="logo-bg" data-bg-src="assets/img/bg/logo_bg_1.png"></div>
-										<a href="#"><img src="{{asset('assets/img/logo.svg')}}" alt="Mediax"></a>
+										<a href="{{path('app_homePage')}}"><img src="{{asset('assets/img/logo.svg')}}" alt="Mediax"></a>
 									</div>
 								</div>
 								<div class="col-auto d-none d-lg-inline-block">
@@ -344,7 +350,7 @@
 											<li>
 												<a href="{{ path('app_about') }}">About Us</a>
 											</li>
-											<li class="menu-item-has-children">
+											{# <li class="menu-item-has-children">
 												<a href="#">Service</a>
 												<ul class="sub-menu">
 													<li>
@@ -354,7 +360,7 @@
 														<a href="#">Service Details</a>
 													</li>
 												</ul>
-											</li>
+											</li> #}
 
 											<li>
 												<a href="{{ path('app_blog_index')}}">Blog</a>
@@ -368,9 +374,9 @@
 								</div>
 								<div class="col-auto">
 									<div class="header-button">
-										<button type="button" class="icon-btn userMenu d-none d-xl-inline-block">
+										{# <button type="button" class="icon-btn userMenu d-none d-xl-inline-block">
 											<i class="far fa-search"></i>
-										</button>
+										</button> #}
 										<a href="{{ path('app_login') }}" class="th-btn">Sign in</a>
 										<a href="{{ path('app_register') }}" class="th-btn style4">Sign up</a>
 
@@ -393,7 +399,6 @@
 	<!--==============================
 						Footer Area
 					==============================-->
-	{% if is_granted('IS_AUTHENTICATED_FULLY')== false %}
 		<footer class="footer-wrapper footer-layout1" data-bg-src="assets/img/bg/footer_bg_1.jpg">
 			<div class="container z-index-common">
 				<div class="newsletter-wrap">
@@ -433,7 +438,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-md-6 col-xl-auto">
+						 <div class="col-md-6 col-xl-auto">
 							<div class="widget widget_nav_menu footer-widget">
 								<h3 class="widget_title">Quick Links</h3>
 								<div class="menu-all-pages-container">
@@ -460,7 +465,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-md-6 col-xl-auto">
+						{# <div class="col-md-6 col-xl-auto">
 							<div class="widget widget_nav_menu footer-widget">
 								<h3 class="widget_title">Popular service</h3>
 								<div class="menu-all-pages-container">
@@ -489,7 +494,7 @@
 									</ul>
 								</div>
 							</div>
-						</div>
+						</div>  #}
 						{# <div class="col-md-6 col-xl-auto">
 							<div class="widget footer-widget">
 								<h3 class="widget_title">Recent Posts</h3>
@@ -558,7 +563,6 @@
 			</div>
 		</footer>
 
-	{% endif %}
 
 	<!-- Scroll To Top -->
 	<div class="scroll-top">
